2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer-track.c: Fix crash when moving the 
	  fader of a mixer track with only one channel (which was 
	  caused by accessing the unitialized track->lock_button
	  variable).

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer-track.{c,h},
	  xfce4-mixer/xfce-mixer-option.{c,h},
	  xfce4-mixer/xfce-mixer-switch.{c,h},
	  xfce4-mixer/xfce-mixer.c: Implement monitoring for mute,
	  record, volume, option and switch changes on all controls.
	  Works like a charm!

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card.c: Mark cards as ready when
	  creating them. If the state is changed asynchroneously, wait
	  until the state change is done before returning from
	  xfce_mixer_card_set_state_ready().

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Remove the keyboard 
	  grabbing feature. It causes too much problems. People without
	  a mousewheel will have to click the plugin and use the real
	  mixer for now.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-track-combo.c: Increment the counter
	  for determining the active track index only when playback
	  and capture tracks are found.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.{c,h}: Add "mute-toggled" 
	  signal for when the middle mouse button is clicked. Add 
	  xfce_volume_button_set_muted() method for manually changing
	  the mute state of the button (does not affect the actual sound
	  settings).
	* panel-plugin/xfce-mixer-plugin.c: Handle 
	  GST_MESSAGE_MUTE_TOGGLED messages by setting the muted state
	  of the plugin button.
	  
2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Add support for
	  xfce_mixer_card_connect() so that the volume button is updated
	  whenever the volume of the current mixer track is changed by
	  another program.